...
        <NativeTabs
          backgroundColor={colorScheme == "dark" ? "#000000" : "#ddeff0"}
          badgeBackgroundColor={colorScheme == "dark" ? "#92cace" : "#438e96"}
          indicatorColor={colorScheme == "dark" ? "#92cace" : "#438e96"}
        >
          <NativeTabs.Trigger name="index">
            <Label>Home</Label>
            <Icon sf="house.fill" drawable="ic_menu_home" />
          </NativeTabs.Trigger>
          <NativeTabs.Trigger name="schedule">
            <Icon sf="calendar" drawable="ic_scheduli_notification" />
            <Label>Schedule</Label>
          </NativeTabs.Trigger>
          <NativeTabs.Trigger name="settings">
            <Icon sf="gear" drawable="ic_settings" />
            <Label>Settings</Label>
          </NativeTabs.Trigger>
        </NativeTabs>
      </GestureHandlerRootView>
    </>
  );
}
...
