...
              <StyledText className="font-poppinsBold text-xl text-center mb-4 text-wedgewood-950 dark:text-wedgewood-300">
                Edit Inactive Date Range
              </StyledText>
            )}
            <StyledPressable
              accessible={true}
              accessibilityLabel="Delete Inactive Day"
              className="bg-red-400 rounded-md p-3 mb-4"
              onPress={() => {
                Alert.alert("Warning", "Are you sure you want to delete this inactive day?", [
                  {
                    text: "Cancel",
                    style: "cancel",
                  },
                  {
                    text: "OK",
                    onPress: () => {
                      deleteEntry(props.inactiveDay, props.scheduleDB, props.setScheduleDB);
                    },
                  },
                ]);
              }}
...
