...
            <StyledText className="text-lg text-wedgewood-950 dark:text-wedgewood-300 font-poppins mt-4">
              Get started by creating your first routine or importing an existing one.
            </StyledText>

            <StyledPressable
              accessible={true}
              accessibilityLabel="Import Schedule"
              className="p-4 shadow-lg bg-purple-300 rounded mt-4 flex flex-row justify-between items-center border-2 border-purple-400 dark:bg-purple-950 dark:border-purple-600 active:bg-purple-500 dark:active:bg-purple-800 w-full"
              onPress={openImportSheet}
            >
              <StyledView className="flex flex-row items-center">
                <FontAwesomeIcon
                  icon={faFileImport}
...
        <ScheduliWrapper currentDate={currentDate}>
          <Status time="" percentage={0} timeRange="" eventName="No events for today." />
          <StyledPressable
            className="p-4 shadow-lg bg-wedgewood-300 rounded mt-4 flex flex-row justify-center items-center border-2 border-wedgewood-400 dark:bg-wedgewood-950 dark:border-wedgewood-600 active:bg-wedgewood-500 dark:active:bg-wedgewood-800"
            onPress={openInactiveSheet}
            accessible={true}
            accessibilityLabel="Important Dates"
          >
            <StyledView className="flex flex-row items-center">
              <FontAwesomeIcon
                icon={faCalendarDay}
                size={20}
                color={colorScheme == "dark" ? "#92cace" : "#2563eb"}
...
