...
          </StyledView>
        </StyledView>
      </Modal>

      <StyledPressable
        accessible={true}
        accessibilityLabel="Import SRVUSD Schedule"
        className="rounded shadow-lg bg-wedgewood-300 p-4 border-2 border-wedgewood-400 mt-4 flex flex-row items-center justify-center dark:bg-wedgewood-950 dark:border-wedgewood-600 active:bg-wedgewood-500 dark:active:bg-wedgewood-800"
        onPress={() => setModalVisible(true)}
      >
        <StyledText className="mr-2 text-wedgewood-950 dark:text-wedgewood-300 font-poppins">
          Import SRVUSD Schedule
        </StyledText>
...
