...
          setModalVisible(false);
        }}
      >
        <StyledView className="fixed inset-0 flex w-full h-full items-center justify-center p-4 bg-black/60">
          <StyledView className="bg-wedgewood-100 dark:bg-gray-950 dark:border-wedgewood-600 border-2 border-wedgewood-600 w-full p-5 rounded-xl">
            <StyledText className="font-poppinsBold text-xl text-center mb-4 text-wedgewood-950 dark:text-wedgewood-300">
              Import UCI Schedule
            </StyledText>
            <LoadingModal
              modalVisible={loadingModalVisible}
              setModalVisible={setLoadingModalVisible}
            ></LoadingModal>

...
